# synced-picture-frame

./: .gitignore  Dockerfile  manage.py  pyproject.toml
.github/workflows/: docker-publish.yml
debug_requests/: get_sleep.http
image_selector/: asgi.py  settings.py  urls.py  wsgi.py
selector/: admin.py  forms.py  models.py  urls.py  views.py
selector/migrations/: 0001_initial.py  0002_device_picturegroup_delete_pictureset.py  0003_alter_device_options.py  0004_device_picture_group.py  0005_alter_picturegroup_current_picture.py  0006_alter_device_last_battery_level_and_more.py  0007_baterylevel.py  0008_picturegroup_admins.py  0009_alter_device_options_alter_picturegroup_options.py  0010_alter_user_options.py
selector/static/assets/js/: sleek.js
selector/templatetags/: active_link.py  switch.py
templates/: 403.html
templates/selector/: admin_users.html  albums.html  base.html  device_confirm_delete.html  device_detail.html  device_form.html  devices.html  index.html  index_new.html  index_old.html  login.html  picturegroup_confirm_delete.html  picturegroup_form.html  pictures.html  upload_image.html
